fixed table overflow

--- a/src/components/eventschedule/eventschedule.css
+++ b/src/components/eventschedule/eventschedule.css
@@ -1,3 +1,12 @@
+.tableWrapper {
+  overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  background-color: #000;
+}
+.tableWrapper::-webkit-scrollbar {
+  display: none;
+}
 .scheduleSection{
     background-color: #000;
     padding-block: 60px;
